# ygo-draft

./: .gitignore  Cargo.toml  README.md  index.html
backend/: Cargo.toml
backend/src/: card.rs  lib.rs  main.rs  queries.rs  routes.rs
card/: card_types.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs  types.rs
frontend/src/components/: card_option.rs  deck_download.rs  decklist.rs  draft_option_display.rs  intro.rs  mod.rs  navbar.rs  option_display.rs  rules.rs
frontend/src/pages/: decks.rs  draft.rs  index.rs  mod.rs
src/: card.rs  lib.rs  main.rs  queries.rs
src/card/: card_types.rs  gen_card.rs  general_card.rs  mod.rs
