[package]
name = "ygo-draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
yew = { version = "0.21.0", features = ["csr"] }