[package]
name = "ygo-draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
rand = { version = "0.8.5", features = ["alloc"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
