[package]
name = "ygo-draft-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
serde = "1.0.216"
serde_json = "1.0.134"
stylist = { version = "0.13.0", features = ["parser", "yew_integration"] }
wasm-bindgen-futures = "0.4.49"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
